--- a/UsersGuide.asciidoc
+++ b/UsersGuide.asciidoc
@@ -48,6 +48,7 @@ For full set of its ability to accept the source information, consult Ant's docu
 |force|Whether this driver proceed to process even if existing output files seem new enough. The descendants (sinks, sinks' sinks, and so on) can not override this configuration.| No; defaults to `no`
 |cache|Whether this driver uses a document cache shared in Chionographis library. When set to `yes`, the performance will be greatly increased. This option is here to enable users to evade a certain XSLT processor's bug.| No; defaults to `no`
 |verbose|Whether this task promotes the log level from "verbose" and "debug" to "info" and "verbose" respectively.| No; defaults to `no`
+|maxworkers|The maximum number of concurrent workers. If not positive, instead the number of available processors minus this attribute is used as the maximum number of the workers. In any case, the actual number of workers is in interval [1, processors].| No; defaults to 0
 |Other _MatchingTask_'s attributes|Please consult Ant's document.|No
 |=================
 
