--- a/UsersGuide.asciidoc
+++ b/UsersGuide.asciidoc
@@ -28,7 +28,7 @@ Chionographis has five actors synopsized below:
 | _Output_ |Sink|Receives XML documents from its driver and writes them into files.
 |=================
 
-=== _Chionographis_ driver
+=== Chionographis driver
 
 A _Chionographis_ driver reads external XML documents from files and emits them into sinks it has.
 As of now, the sources of XML documents (called _original_ sources) are files only.
@@ -59,6 +59,7 @@ For full set of its ability to accept the source information, consult Ant's docu
 | Element | Description | Required
 |meta|An instruction that the driver shall put a processing instruction (PI) which includes the meta-information of the original source document. The PIs shall be put as the first children of the document element.| No; can be appear arbitrary number of times
 |namespace|A pair of a namespace prefix and a namespace name which is mapped from the prefix. This mapping is used by task's child elements "transform", "all" and "snip".| No
+|depends|Resources depended by this task additionally. The resources are used only to decide whether the corresponding output files are up to date.| No
 |transform|A _Transform_ sink. .4+| No; at least one sink required
 |all|An _All_ sink.
 |snip|A _Snip_ sink.
@@ -75,9 +76,9 @@ For full set of its ability to accept the source information, consult Ant's docu
 |name|The target of the processing instruction (PI).| No; defaulted to "chionographis-" and the type concatenated, e.g., "chionographis-file-name"
 
 |type|The type of the meta-information, which is the data of PI.  +
-When "uri", the data shall be the absolute URI of the original source. +
-When "file-name", the data shall be the last part of the path of the URI. +
-When "file-title", the data shall be the substring of the file name before its last period (".").| Yes
+When `uri`, the data shall be the absolute URI of the original source. +
+When `file-name`, the data shall be the last part of the path of the URI. +
+When `file-title`, the data shall be the substring of the file name before its last period (".").| Yes
 
 |=================
 
@@ -90,8 +91,21 @@ When "file-title", the data shall be the substring of the file name before its l
 |uri|The namespace name (URI) mapped from the prefix. | Yes
 |=================
 
+===== Depends element's attributes and child elements
 
-=== _Transform_ filter
+[options="header", cols="1,3,1"]
+|=================
+| Attribute / Child | Description | Required
+|attribute: absent|An instruction how depended resources which do not exist are treated. +
+When `fail`, the execution will terminate with an error. +
+When `new`, the absent depended resources are regarded "very new", so that the corresponding output files are regarded as not up to date. +
+When `ignore`, the absent depended resources are silently ignored.| No; defaults to `fail`
+|element: _resource collection_|The depended resources represented by an Ant resource collection such as `fileset`. | Yes
+
+|=================
+
+
+=== Transform filter
 
 A _Transform_ filter receives XML documents, and apply transformation by an XSLT stylesheet,
 generates output XML documents one per one input document and pass them to sinks it has.
@@ -116,6 +130,8 @@ generates output XML documents one per one input document and pass them to sinks
 |=================
 | Element | Description | Required
 |param|A key-value pair of stylesheet parameter. As of now, only string parameter values are supported.| No
+|depends|Resources depended by this filter additionally. The resources are used only to decide whether the corresponding output files are up to date. +
+The way to configure this element is the same as that to configure one that appears in _Chionographis_ driver. So please see the _Chionographis_ driver's explanation for details.| No
 |transform|A _Transform_ sink. .4+| No; at least one sink required
 |all|An _All_ sink.
 |snip|A _Snip_ sink.
@@ -130,13 +146,13 @@ generates output XML documents one per one input document and pass them to sinks
 | Attribute | Description | Required
 
 |name|The name of the stylesheet parameter. +
-Supported forms are `localName`, `prefix:localName` and `{namespaceURI}localName`. In first form, the name doesn't belong to any namespace. In second form, the name belongs to a namespace whose name is mapped from prefix using the _Chionographis_'s child _namespace_ elements.| Yes
+Supported forms are `localName`, `prefix:localName` and `{namespaceURI}localName`. In the first form, the name doesn't belong to any namespace. In the second form, the name belongs to a namespace whose name is mapped from prefix using the _Chionographis_'s child _namespace_ elements.| Yes
 
 |(text)|The value of the stylesheet parameter. | Yes
 |=================
 
 
-=== _All_ filter
+=== All filter
 
 An _All_ filter receives XML documents, collects all of their document elements,
 arranges them as child elements of a newly-created XML document's document element,
@@ -150,7 +166,7 @@ The number of document passed to the sinks is always one.
 | Attribute | Description | Required
 
 |root|The name of the document element of the resulted document. +
-Supported forms are `localName`, `prefix:localName` and `{namespaceURI}localName`. In first form, the name doesn't belong to any namespace. In second form, the name belongs to a namespace whose name is mapped from the prefix using the _Chionographis_'s child _namespace_ elements.| Yes
+Supported forms are `localName`, `prefix:localName` and `{namespaceURI}localName`. In the first form, the name doesn't belong to any namespace. In the second form, the name belongs to a namespace whose name is mapped from the prefix using the _Chionographis_'s child _namespace_ elements.| Yes
 
 |force|Whether this filter proceed to process even if existing output files seem new enough. The descendants (sinks, sinks' sinks, and so on) can not override this to `no`.| No; defaults to `no`; see note
 |=================
@@ -175,7 +191,7 @@ documents are added or removed.
 |=================
 
 
-=== _Snip_ filter
+=== Snip filter
 
 A _Snip_ filter receives XML documents, generates document fragments pointed by an XPath criteria from them,
 and passes the resulted document fragments as independent documents to sinks it has.
@@ -204,7 +220,7 @@ It can include include names which belong some namespaces only when the namespac
 |=================
 
 
-=== _Output_ sink
+=== Output sink
 
 An _Ouput_ sink receives XML documents and writes them into filesystem files.
 
@@ -252,6 +268,18 @@ The XPath expression can include include names which belong some namespaces only
 [NOTE]
 _dest_ and file mappers can be specified exclusively. _dest_ and _refer_ can be specified exclusively. At least one of _dest_, _refer_ and a file mapper must be specified. At most one file mapper can be installed .
 
+
+== Criteria to skip processing
+
+All drivers of Chionographis skip processing inputs which are not newer than their corresponding outputs unless they are not forced to process by _force_ attrubutes.
+
+By default, drivers trigger processing for each input, when either the input file itself or the XSLT stylesheet files are newer than the corresponding output files.
+So, in the following cases, skipping processing will occur and the corresponding outputs are left untouched:
+
+The input XML files depend on other files which are newer:: For example, newer DTD files and newer external parsed entities don't make the input files processed.
+The XSLT stylesheet files depend on other files which are newer:: For example, newer external document files referred by `document()` XSLT functions and external stylesheet files imported by `<xsl:import>` don't make the input files processed either.
+
+You can tell _Chionographis_ and _Transform_ drivers to refer the new-ness these depended files by _depends_ child elements.
 
 == Parallelism
 
