--- a/UsersGuide.asciidoc
+++ b/UsersGuide.asciidoc
@@ -1,12 +1,15 @@
 = Chionographis User's Guide
+furfurylic
+:revnumber:, :revdate:
 
 == Overview
 
-Chionographis is an Ant task that performs cascading XML transformation.
+link:https://github.com/furfurylic/chionographis[Chionographis] is an Ant task that performs cascading XML transformation.
 This transformation is done with following three primitive operations applied arbitrary number of times in arbitrary order:
- - XML transformation with XSLT stylesheet,
- - joining of multiple XML documents into one,
- - and snipping fragments from XML documents.
+
+* XML transformation with XSLT stylesheet,
+* joining of multiple XML documents into one,
+* and snipping fragments from XML documents.
 
 === Requirements
 
@@ -47,18 +50,18 @@ Then you can use the task:
 
 This target does following:
 
- . first reads and parses all files with `.xml` extension in `flora` directory,
- . then collects all parsed documents into a new document whose document element is `<flora>...</flora>`,
- . then transforms this document with XSLT stylesheet `flora/to-genera.xsl`,
- . then finds all fragments from the resulted document which matches XPath criterion `/genera/genus`,
- . finally writes each fragment to a file whose path is `flora-genera/XXX.xml`, where `XXX` is the string value of XPath expression `/genus/@name` of each fragment document (that is, `XXX` of the document element `<genus name="XXX">...</genus>`).
+ . first reads and parses all files with '.xml' extension in 'flora' directory,
+ . then collects all parsed documents into a new document whose document element is +<flora>...</flora>+,
+ . then transforms this document with XSLT stylesheet 'flora/to-genera.xsl',
+ . then finds all fragments from the resulted document which matches XPath criterion +/genera/genus+,
+ . finally writes each fragment to a file whose path is 'flora-genera/XXX.xml', where +XXX+ is the string value of XPath expression +/genus/@name+ of each fragment document (that is, +XXX+ of the document element +<genus name="XXX">...</genus>+).
 
 Additionally, it might be noteworthy that:
 
- - this target recognizes whether the output files are up to date for the input files, and, if so, cuts out the file output process,
- - and if the runtime environment has multiple available processors, this target tries to take advantage of them to parallelize the reading and writing of the files.
+ * this target recognizes whether the output files are up to date for the input files, and, if so, cuts out the file output process,
+ * and if the runtime environment has multiple available processors, this target tries to take advantage of them to parallelize the reading and writing of the files.
 
-To run this target you can use the usual `ant` command, but you have to make Ant able to find `chionographis.jar`:
+To run this target you can use the usual `ant` command, but you have to make Ant able to find 'chionographis.jar':
 
 [source,sh]
 ----
@@ -74,9 +77,9 @@ each of which represents one XML processing. Actors are classified into three ca
 [options="header", cols="1,4,4"]
 |=================
 | Category | Description | Example
-|_Driver_|Passes XML documents to _sinks_ it holds.|_Chionographis_, _Transform_, _All_ and _Snip_
-|_Sink_|Receives XML documents from its _driver_.|_Output_, _Transform_, _All_ and _Snip_
-|_Filter_|Is a _driver_ and a _sink_.|_Transform_, _All_ and _Snip_
+|Driver|Passes XML documents to _sinks_ it holds.|_Chionographis_, _Transform_, _All_ and _Snip_
+|Sink|Receives XML documents from its _driver_.|_Output_, _Transform_, _All_ and _Snip_
+|Filter|Is a _driver_ and a _sink_.|_Transform_, _All_ and _Snip_
 |=================
 
 Chionographis has five actors synopsized below:
@@ -84,11 +87,11 @@ Chionographis has five actors synopsized below:
 [options="header", cols="3,2,10"]
 |=================
 | Actor | Category | Synopsis
-| _Chionographis_ |Driver|Reads XML documents from external sources (called _original_ sources) and passes them to its sinks.
-| _Transform_ |Filter|Receives XML documents from its driver, transforms them by an XSLT stylesheet, and passes them to its sinks.
-| _All_ |Filter|Receives XML documents from its driver, collects all of them into a new XML documents, and passes it to its sinks.
-| _Snip_ |Filter|Receives XML documents from its driver, extracts all document fragments matching an XPath expression, and passes them to its sinks with each fragment being one document.
-| _Output_ |Sink|Receives XML documents from its driver and writes them into files.
+| Chionographis |Driver|Reads XML documents from external sources (called _original_ sources) and passes them to its sinks.
+| Transform |Filter|Receives XML documents from its driver, transforms them by an XSLT stylesheet, and passes them to its sinks.
+| All |Filter|Receives XML documents from its driver, collects all of them into a new XML documents, and passes it to its sinks.
+| Snip |Filter|Receives XML documents from its driver, extracts all document fragments matching an XPath expression, and passes them to its sinks with each fragment being one document.
+| Output |Sink|Receives XML documents from its driver and writes them into files.
 |=================
 
 === Chionographis driver
@@ -99,7 +102,7 @@ As of now, the sources of XML documents (called _original_ sources) are files on
 This is an Ant task too, and can be configured to read documents from various sources with
 Ant framework. For example, it can have filesets and exclude patterns of Ant.
 For full set of its ability to accept the source information, consult Ant's document
-(this task extends from _MatchingTask_, which is a common base class of Ant's core tasks, for example, Javac and Delete.)
+(this task extends from _MatchingTask_, which is a common base class of Ant's core tasks, for example, _Javac_ and _Delete_.)
 
 ==== Attributes
 
@@ -108,10 +111,10 @@ For full set of its ability to accept the source information, consult Ant's docu
 | Attribute | Description | Required
 |basedir|The base directory of this task.| No; defaults to the project's base directory
 |srcdir|The source directory. If not absolute, will be resolved by the base directory of the task.| No; defaults to the task's base directory
-|force|Whether this driver proceed to process even if existing output files seem new enough. The descendants (sinks, sinks' sinks, and so on) can not override this to `no`.| No; defaults to `no`
-|cache|Whether this driver uses a document cache shared in Chionographis library for external parsed entities. When set to `no`, the performance will fall significantly. This option is provided to enable users to evade a certain XSLT processor's bug.| No; defaults to `no`
-|verbose|Whether this task promotes log levels from "verbose" to "info" for some log entries, such as reports of document output.| No; defaults to `no`
-|parallel|Whether parallel execution is employed. The parallel execution is done with static thread pool whose maximum thread count coincides with the available processor count.| No; defaults to `yes`
+|force|Whether this driver proceed to process even if existing output files seem new enough. The descendants (sinks, sinks' sinks, and so on) can not override this to +no+.| No; defaults to +no+
+|cache|Whether this driver uses a document cache shared in Chionographis library for external parsed entities. When set to +no+, the performance will fall significantly. This option is provided to enable users to evade a certain XSLT processor's bug.| No; defaults to +no+
+|verbose|Whether this task promotes log levels from +verbose+ to +info+ for some log entries, such as reports of document output.| No; defaults to +no+
+|parallel|Whether parallel execution is employed. The parallel execution is done with static thread pool whose maximum thread count coincides with the available processor count.| No; defaults to +yes+
 |Other _MatchingTask_'s attributes|Please consult Ant's document.|No
 |=================
 
@@ -121,7 +124,7 @@ For full set of its ability to accept the source information, consult Ant's docu
 |=================
 | Element | Description | Required
 |meta|An instruction that the driver shall put a processing instruction (PI) which includes the meta-information of the original source document. The PIs shall be put as the first children of the document element.| No; can be appear arbitrary number of times
-|namespace|A pair of a namespace prefix and a namespace name which is mapped from the prefix. This mapping is used by task's child elements "transform", "all" and "snip".| No
+|namespace|A pair of a namespace prefix and a namespace name which is mapped from the prefix. This mapping is used by descentant _Transform_, _All_ and _Snip_ drivers.| No
 |depends|Resources depended by this task additionally. The resources are used only to decide whether the corresponding output files are up to date.| No
 |transform|A _Transform_ sink. .4+| No; at least one sink required
 |all|An _All_ sink.
@@ -136,12 +139,12 @@ For full set of its ability to accept the source information, consult Ant's docu
 |=================
 | Attribute | Description | Required
 
-|name|The target of the processing instruction (PI).| No; defaulted to "chionographis-" and the type concatenated, for example, "chionographis-file-name"
+|name|The target of the processing instruction (PI).| No; defaulted to +chionographis-+ and the type concatenated, for example, +chionographis-file-name+
 
 |type|The type of the meta-information, which is the data of PI.  +
-When `uri`, the data shall be the absolute URI of the original source. +
-When `file-name`, the data shall be the last part of the path of the URI. +
-When `file-title`, the data shall be the substring of the file name before its last period (".").| Yes
+When +uri+, the data shall be the absolute URI of the original source. +
+When +file-name+, the data shall be the last part of the path of the URI. +
+When +file-title+, the data shall be the substring of the file name before its last period (+.+).| Yes
 
 |=================
 
@@ -160,10 +163,10 @@ When `file-title`, the data shall be the substring of the file name before its l
 |=================
 | Attribute / Nested element | Description | Required
 |attribute: absent|An instruction how depended resources which do not exist are treated. +
-When `fail`, the execution will terminate with an error. +
-When `new`, the absent depended resources are regarded "very new", so that the corresponding output files are regarded as not up to date. +
-When `ignore`, the absent depended resources are silently ignored.| No; defaults to `fail`
-|element: _resource collection_|The depended resources represented by an Ant resource collection such as `fileset`. | Yes
+When +fail+, the execution will terminate with an error. +
+When +new+, the absent depended resources are regarded ``very new'', so that the corresponding output files are regarded as not up to date. +
+When +ignore+, the absent depended resources are silently ignored.| No; defaults to +fail+
+|element: _resource collection_|The depended resources represented by an Ant resource collection such as a _fileset_. | Yes
 
 |=================
 
@@ -181,10 +184,10 @@ generates output XML documents one per one input document and pass them to sinks
 
 |style|The URI of the XSLT stylesheet. If not absolute, will be resolved by the base directory of the task.| Yes
 
-|force|Whether this filter proceed to process even if existing output files seem new enough. The descendants (sinks, sinks' sinks, and so on) can not override this to `no`.| No; defaults to `no`
+|force|Whether this filter proceed to process even if existing output files seem new enough. The descendants (sinks, sinks' sinks, and so on) can not override this to +no+.| No; defaults to +no+
 
-|cache|Whether this driver uses a document cache shared in Chionographis library for `xsl:include`, `xsl:import`, XPath `document` functions, and external entities referred by documents above.  +
- When set to `no`, the performance will fall significantly. This option is provided to enable users to evade a certain XSLT processor's bug.| No; defaults to `yes`
+|cache|Whether this driver uses a document cache shared in Chionographis library for +<xsl:include>+, +<xsl:import>+, XPath +document()+ functions, and external entities referred by documents above.  +
+ When set to +no+, the performance will fall significantly. This option is provided to enable users to evade a certain XSLT processor's bug.| No; defaults to +yes+
 |=================
 
 ==== Nested elements
@@ -209,7 +212,7 @@ The way to configure this element is the same as that to configure one that appe
 | Attribute | Description | Required
 
 |name|The name of the stylesheet parameter. +
-Supported forms are `localName`, `prefix:localName` and `{namespaceURI}localName`. In the first form, the name doesn't belong to any namespace. In the second form, the name belongs to a namespace whose name is mapped from prefix using the _Chionographis_'s child _namespace_ elements.| Yes
+Supported forms are +localName+, +prefix:localName+ and +{namespaceURI}localName+. In the first form, the name doesn't belong to any namespace. In the second form, the name belongs to a namespace whose name is mapped from prefix using the _Chionographis_'s child _namespace_ elements.| Yes
 
 |(text)|The value of the stylesheet parameter. | Yes
 |=================
@@ -233,16 +236,16 @@ If the order is significant, you should sort the elements by a descendant _Trans
 | Attribute | Description | Required
 
 |root|The name of the document element of the resulted document. +
-Supported forms are `localName`, `prefix:localName` and `{namespaceURI}localName`. In the first form, the name doesn't belong to any namespace. In the second form, the name belongs to a namespace whose name is mapped from the prefix using the _Chionographis_'s child _namespace_ elements.| Yes
+Supported forms are +localName+, +prefix:localName+ and +{namespaceURI}localName+. In the first form, the name doesn't belong to any namespace. In the second form, the name belongs to a namespace whose name is mapped from the prefix using the _Chionographis_'s child _namespace_ elements.| Yes
 
-|force|Whether this filter proceed to process even if existing output files seem new enough. The descendants (sinks, sinks' sinks, and so on) can not override this to `no`.| No; defaults to `no`; see note
+|force|Whether this filter proceed to process even if existing output files seem new enough. The descendants (sinks, sinks' sinks, and so on) can not override this to +no+.| No; defaults to +no+; see note
 |=================
 
 [NOTE]
 If the set of the original source documents is constant (regardless of whether
-each document's content is modified), setting _force_ to `no` or
+each document's content is modified), setting _force_ to +no+ or
 leaving it to be defaulted is generally safe.
-Otherwise, setting _force_ to `no` is possibly dangerous because the _All_
+Otherwise, setting _force_ to +no+ is possibly dangerous because the _All_
 filter can overlook the possible changes in resulted document when source
 documents are added or removed.
 
@@ -272,7 +275,7 @@ and passes the resulted document fragments as independent documents to sinks it 
 |select|An XPath expression which specifies the unit in which the source document is snipped. +
 It can include names which belong some namespaces only when the namespaces are denoted by prefixes defined in the _Chinographis_'s child _namespace_ elements.| Yes
 
-|force|Whether this filter proceed to process even if existing output files seem new enough. The descendants (sinks, sinks' sinks, and so on) can not override this to `no`.| No; defaults to `no`
+|force|Whether this filter proceed to process even if existing output files seem new enough. The descendants (sinks, sinks' sinks, and so on) can not override this to +no+.| No; defaults to +no+
 |=================
 
 ==== Nested elements
@@ -298,10 +301,10 @@ stylesheet files.
 
 As of now, last modification times of external entities,
 included or imported stylesheet files,
-and document files read through XSLT `document` functions are not reflected on
+and document files read through XSLT +document()+ functions are not reflected on
 the decision. In addition, if the stylesheets are not files
-(that is, they have URIs with schemes other than `file`),
-their last modified times are regarded "very new",
+(that is, they have URIs with schemes other than +file+),
+their last modified times are regarded _very new_,
 so the destination files are always overwritten.
 
 ==== Attributes
@@ -314,14 +317,14 @@ so the destination files are always overwritten.
 
 |dest|The destination file path. If not absolute, will be resolved by the destination directory.| No; see note
 
-|refer|An XPath expression which points the content of the "source document" (see below) required to decide the output file path. +
+|refer|An XPath expression which points the content of the _source document_ (see below) required to decide the output file path. +
 The string value of the pointee is used as an input to the installed file mapper if any, otherwise is used as if it is set to _dest_ attribute.  +
 _Transform_ drivers retrieve the pointee from the source documents of the transformation; on the other hand, the _Chionographis_, _All_, and _Snip_ drivers retrieve from their result document (the source document of this sink). +
 The XPath expression can include names which belong some namespaces only when the namespaces are denoted by prefixes defined in the task's child _namespace_ elements.| No; see note
 
-|mkdirs|Whether this sink creates parent directories of the destination file if needed.| No; defaults to `Yes`
+|mkdirs|Whether this sink creates parent directories of the destination file if needed.| No; defaults to +yes+
 
-|force|Whether this sink creates output files even if existing files seem new enough.| No; defaults to `no`
+|force|Whether this sink creates output files even if existing files seem new enough.| No; defaults to +no+
 |=================
 
 ==== Nested elements
@@ -344,13 +347,13 @@ By default, drivers trigger processing for each input, when either the input fil
 So, in the following cases, skipping processing will occur and the corresponding outputs are left untouched:
 
 The input XML files depend on other files which are newer:: For example, newer DTD files and newer external parsed entities don't make the input files processed.
-The XSLT stylesheet files depend on other files which are newer:: For example, newer external document files referred by `document()` XSLT functions and external stylesheet files imported by `<xsl:import>` don't make the input files processed either.
+The XSLT stylesheet files depend on other files which are newer:: For example, newer external document files referred by +document()+ XSLT functions and external stylesheet files imported by +<xsl:import>+ don't make the input files processed either.
 
 You can tell _Chionographis_ and _Transform_ drivers to refer the newness of these depended files by _depends_ child elements.
 
 == Parallelism
 
-Chionographis task tries to execute in parallel unless the _Chionographis_ driver's _parallel_ attribute is set to `no`.
+Chionographis task tries to execute in parallel unless the _Chionographis_ driver's _parallel_ attribute is set to +no+.
 Actually, Chionographis task employs parallel execution only in following two situations:
 
 Multiple original sources:: In this case, the _Chionographis_ driver reads, parses and passes them to its sinks in parallel.
@@ -360,5 +363,5 @@ It is notable that an _All_ filter is an end point of parallel execution, for _A
 Of course, if there is a _Snip_ filter in descendant of an _All_ filter, it will be a beginning point of parallelism again.
 
 All Chionographis tasks share one common thread pool for parallelism.
-So if you run multiple Chinograhis tasks simultaneously in an Ant's _parallel_ task, they are likely to share the resource
+So if you run multiple Chinograhis tasks simultaneously in an Ant's _Parallel_ task, they are likely to share the resource
 (to be specific, it is not the case that each Chinonographis task tries to utilize all the available processors as if there are no other processor users).
