--- a/UsersGuide.asciidoc
+++ b/UsersGuide.asciidoc
@@ -324,6 +324,8 @@ The XPath expression can include names which belong some namespaces only when th
 |mkdirs|Whether this sink creates parent directories of the destination file if needed.| No; defaults to +yes+
 
 |force|Whether this sink creates output files even if existing files seem new enough.| No; defaults to +no+
+
+|timid|Whether this sink avoids overwriting existing files which already have identical contents to be written.| No; defaults to +no+
 |=================
 
 ==== Nested elements
