--- a/UsersGuide.asciidoc
+++ b/UsersGuide.asciidoc
@@ -130,7 +130,7 @@ If you set this property to +false+, "dry run" mode is disabled regardless of th
 [options="header", cols="1,3,1"]
 |=================
 | Element | Description | Required
-|meta|An instruction that the driver shall put a processing instruction (PI) which includes the meta-information of the original source document. The PIs shall be put as the first children of the document element.| No; can be appear arbitrary number of times
+|meta|An instruction that the driver shall put a processing instruction (PI) which includes the meta-information of the original source document. The PIs shall be put as the first children of the document element. If there are multiple PIs to be put, their document order shall be the same as the order of these elements. | No; can be appear arbitrary number of times
 |namespace|A pair of a namespace prefix and a namespace name which is mapped from the prefix. This mapping is used by descentant _Transform_, _All_ and _Snip_ drivers.| No
 |depends|Resources depended by this task additionally. The resources are used only to decide whether the corresponding output files are up to date.| No
 |transform|A _Transform_ sink. .4+| No; at least one sink required
