--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Changes for 1.0.2:
+
+ * Fixed a fatal bug by which existing files were not truncated prior to 
+   overwriting.
+
 Changes for 1.0.1:
 
  * Fixed behaviour of <depends absent="new"> for Chionographis driver, which
