--- a/UsersGuide.asciidoc
+++ b/UsersGuide.asciidoc
@@ -189,7 +189,8 @@ generates output XML documents one per one input document and pass them to sinks
 |=================
 | Attribute | Description | Required
 
-|style|The URI or the file path of the XSLT stylesheet. If not absolute, will be resolved by the base directory of the task.| Yes
+|style|The URI or the file path of the XSLT stylesheet. If not absolute, will be resolved by the base directory of the task. +
+ If this attribute is omitted, the _Transform_ filter get the stylesheet location through the https://www.w3.org/TR/xml-stylesheet/["Associating Style Sheets with XML documents"] mechanism.| No
 
 |force|Whether this filter proceed to process even if existing output files seem new enough. The descendants (sinks, sinks' sinks, and so on) can not override this to +no+.| No; defaults to +no+
 
