--- a/UsersGuide.asciidoc
+++ b/UsersGuide.asciidoc
@@ -131,8 +131,8 @@ If you set this property to +false+, "dry run" mode is disabled regardless of th
 |=================
 | Element | Description | Required
 |meta|An instruction that the driver shall put a processing instruction (PI) which includes the meta-information of the original source document. The PIs shall be put as the first children of the document element. If there are multiple PIs to be put, their document order shall be the same as the order of these elements. | No; can be appear arbitrary number of times
-|namespace|A pair of a namespace prefix and a namespace name which is mapped from the prefix. This mapping is used by descentant _Transform_, _All_ and _Snip_ drivers.| No
-|depends|Resources depended by this task additionally. The resources are used only to decide whether the corresponding output files are up to date.| No
+|namespace|A pair of a namespace prefix and a namespace name which is mapped from the prefix. This mapping is used by descentant _Transform_, _All_ and _Snip_ drivers.| No; can be appear arbitrary number of times
+|depends|Resources depended by this task additionally. The resources are used only to decide whether the corresponding output files are up to date.| No; can be appear arbitrary number of times
 |transform|A _Transform_ sink. .4+| No; at least one sink required
 |all|An _All_ sink.
 |snip|A _Snip_ sink.
@@ -203,10 +203,10 @@ generates output XML documents one per one input document and pass them to sinks
 [options="header", cols="1,3,1"]
 |=================
 | Element | Description | Required
-|assoc|A narrowing information of the search of the associated stylesheet.| No; at most one can be specified.
-|param|A key-value pair of stylesheet parameter. As of now, only string parameter values are supported.| No
+|assoc|A narrowing information of the search of the associated stylesheet.| No; at most one can be specified
+|param|A key-value pair of stylesheet parameter. As of now, only string parameter values are supported.| No; can be appear arbitrary number of times
 |depends|Resources depended by this filter additionally. The resources are used only to decide whether the corresponding output files are up to date. +
-The way to configure this element is the same as that to configure one that appears in _Chionographis_ driver. So please see the _Chionographis_ driver's explanation for details.| No
+The way to configure this element is the same as that to configure one that appears in _Chionographis_ driver. So please see the _Chionographis_ driver's explanation for details.| No; can be appear arbitrary number of times
 |transform|A _Transform_ sink. .4+| No; at least one sink required
 |all|An _All_ sink.
 |snip|A _Snip_ sink.
